--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -150,10 +150,10 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   display: grid;
   grid-template-columns: 30px auto;
   grid-gap: 10px;
-  height: 50px;
+  height: calc(44rem / 16);
   padding: 0 10px;
   position: relative;
-  flex: 0 0 50px;
+  flex: 0 0 calc(44rem / 16);
   flex-direction: row;
   align-items: center;
   background-color: $systemInfoBgColor;
@@ -457,6 +457,19 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   }
 }
 
+#global-header,
+li.crumb {
+  .menubtn,
+  .action-btn {
+    padding: 0 var(--s) !important;
+    height: var(--touch-target-size);
+
+    &:not(:hover):not(:active) {
+      background-color: transparent;
+    }
+  }
+}
+
 #global-header {
   width: 100%;
   margin-bottom: var(--m);
@@ -464,6 +477,7 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   background: var(--gray-050);
 
   .flex {
+    height: calc(44rem / 16);
     align-items: center;
   }
 
@@ -478,12 +492,13 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 36px;
-  height: 50px;
+  width: 44px;
+  min-width: 44px;
+  height: calc(44rem / 16);
+  border-right: 1px solid var(--medium-hairline-color);
   line-height: 26px;
   color: currentColor;
   text-align: center;
-  @include margin-left(-10px);
 
   &:before {
     @include icon;
@@ -503,20 +518,11 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   align-items: center;
   font-size: 13px;
   margin: 0 !important;
+  max-width: 100%;
+  overflow: hidden;
 
   &.empty {
     display: none;
-  }
-
-  a,
-  button {
-    color: var(--light-text-color);
-    transition: color linear 100ms;
-
-    &:hover {
-      color: var(--link-color);
-      text-decoration: none;
-    }
   }
 
   nav {
@@ -524,28 +530,55 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   }
 }
 
-.breadcrumb-list {
+#crumb-list {
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  max-width: 100%;
+  height: calc(44rem / 16);
 
-  li {
-    display: inline-flex;
-    align-items: center;
+  --arrow-padding: 10;
+  --arrow-height: 22;
+  --arrow-angle: 35;
+  --arrow-width: 17.1111; // height/(45/angle)
+  --arrow-c: 27.871; // sqrt(height^2+width^2)
 
-    a,
-    button {
-      padding: 15px 0;
-    }
+  body.rtl & {
+    --arrow-angle: -35;
+    --arrow-width: -19.4444;
+  }
 
-    button {
-      cursor: pointer;
-    }
+  li.crumb {
+    position: relative;
+    @include padding-left(calc(var(--arrow-width) * 0.5rem / 16));
+    cursor: default;
+    color: var(--light-text-color);
 
-    &:after {
-      @include margin(0, 8px, 0, 7px);
-      @include angle(right, var(--medium-hairline-color));
+    &:not(.current) {
+      @include padding-right(calc(var(--arrow-width) * 1rem / 16));
+
+      &:before,
+      &:after {
+        display: block;
+        content: '';
+        width: 1px;
+        height: calc(var(--arrow-c) * 1rem / 16);
+        position: absolute;
+        @include right(calc(var(--arrow-width) * 0.5rem / 16));
+        background: var(--medium-hairline-color);
+        pointer-events: none;
+      }
+
+      &:before {
+        top: calc((var(--arrow-height) - var(--arrow-c)) / 2 * 1rem / 16);
+        transform: rotate(calc(var(--arrow-angle) * -1deg));
+      }
+
+      &:after {
+        bottom: calc((var(--arrow-height) - var(--arrow-c)) / 2 * 1rem / 16);
+        transform: rotate(calc(var(--arrow-angle) * 1deg));
+      }
     }
   }
 
@@ -560,10 +593,99 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   }
 }
 
+#crumb-menu-trigger {
+  min-width: var(--touch-target-size);
+
+  &:before {
+    width: 100%;
+  }
+}
+
+#crumb-menu {
+  .chip {
+    min-height: 44px;
+  }
+}
+
+li.crumb {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: var(--xs);
+
+  .menubtn {
+    margin: 0 calc(var(--xs) * -1 + 2px);
+  }
+
+  [data-icon='ellipsis']:before {
+    margin-top: 3px;
+    font-size: 17px;
+  }
+
+  .chip {
+    padding: 0;
+    background-color: transparent;
+
+    .label-link {
+      max-width: 15em;
+
+      span:not(.context-label) {
+        display: block;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
+
+  & > a {
+    flex: 1;
+    display: flex !important;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: var(--xs);
+
+    .menu--disclosure & {
+      min-height: 34px;
+    }
+
+    & > [data-icon] {
+      margin-top: -2px;
+    }
+  }
+
+  a,
+  button {
+    display: inline-flex;
+    align-items: center;
+    min-height: var(--touch-target-size);
+
+    &:not(:hover) {
+      color: var(--text-color);
+    }
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  a {
+    position: relative;
+  }
+
+  button {
+    cursor: pointer;
+  }
+}
+
 li.breadcrumb-toggle-wrapper {
   &::after {
     content: none;
   }
+}
+
+.context-menu-container .menubtn {
+  @include margin-left(0);
 }
 
 #account-menu {
@@ -667,7 +789,8 @@ li.breadcrumb-toggle-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
-  @include padding-right(25px);
+  @include padding-left(var(--s));
+  @include padding-right(calc(var(--padding) + 1px));
   padding-top: 5px;
   padding-bottom: 5px;
   height: 100%;
@@ -689,8 +812,6 @@ li.breadcrumb-toggle-wrapper {
 }
 
 .header-photo {
-  padding: 5px 0;
-
   img,
   svg {
     display: block;
@@ -792,15 +913,14 @@ li.breadcrumb-toggle-wrapper {
   margin-bottom: var(--m);
 }
 
-#crumbs,
-#header {
-  padding-left: var(--padding);
-  padding-right: var(--padding);
-}
-
-#primary-nav-toggle {
-  @media only screen and (min-width: $minFullUiWidth) {
+@media only screen and (min-width: $minFullUiWidth) {
+  #primary-nav-toggle {
     display: none;
+  }
+
+  #crumbs:not(.empty) #primary-nav-toggle + nav ul li:first-child,
+  #crumbs.empty + .context-menu-container {
+    @include padding-left(var(--padding));
   }
 }
 
@@ -822,8 +942,7 @@ li.breadcrumb-toggle-wrapper {
   flex-wrap: nowrap;
   justify-content: space-between;
   gap: var(--s);
-  padding-top: var(--s);
-  padding-bottom: var(--s);
+  padding: var(--s) var(--padding);
   position: relative;
   z-index: 2;
   width: calc(100vw - #{$sidebarWidth});
