--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -462,13 +462,6 @@ button {
   cursor: pointer;
 }
 
-/* revision button */
-.context-btn.disabled {
-  opacity: 1;
-  color: var(--medium-dark-text-color);
-  background-color: transparentize($grey200, 0.5) !important;
-}
-
 /* status icons */
 .checkmark-icon,
 .alert-icon {
@@ -502,52 +495,6 @@ button {
   &:before {
     content: 'alert';
     color: var(--error-color);
-  }
-}
-
-.menu.revision-menu {
-  padding: 10px 24px;
-
-  hr {
-    margin: 10px -24px;
-  }
-
-  ul {
-    li {
-      &.sel {
-        margin: 0 -14px;
-        padding: 0 14px;
-        background: var(--gray-050);
-        border-radius: var(--large-border-radius);
-
-        .edited-desc {
-          display: flex;
-          align-items: center;
-          @include margin-left(10px);
-          border-top: 1px solid var(--hairline-color);
-          padding: 10px 0;
-          color: var(--light-text-color);
-          white-space: normal;
-
-          p {
-            margin: 0;
-          }
-
-          .btn {
-            @include margin-left(14px);
-          }
-        }
-      }
-
-      a {
-        padding-top: 7px;
-        border-radius: var(--large-border-radius);
-      }
-    }
-  }
-
-  .extralight {
-    margin-top: 2px;
   }
 }
 
@@ -1866,7 +1813,7 @@ ul.icons {
 /* small buttons */
 .btngroup.small .btn,
 .btn.small {
-  padding: 0 7px !important;
+  padding: 0 var(--s) !important;
   font-size: 12px;
   line-height: 22px;
 }
@@ -2585,8 +2532,8 @@ table {
 
       th:not(.orderable),
       td {
-        padding-top: var(--pane-padding, var(--m));
-        padding-bottom: var(--pane-padding, var(--m));
+        padding-top: var(--pane-padding, var(--s));
+        padding-bottom: var(--pane-padding, var(--s));
       }
 
       th {
@@ -2840,8 +2787,13 @@ table {
     align-items: center;
     gap: var(--s);
 
-    .status {
-      margin: 0;
+    .status,
+    .icon {
+      @include margin-right(0);
+    }
+
+    .icon {
+      margin-top: -4px;
     }
   }
 
@@ -3074,6 +3026,25 @@ table {
   }
 }
 
+.context-label,
+.context-menu-container .menubtn {
+  display: inline-flex;
+  align-items: center;
+  @include margin-left(var(--xs));
+  height: var(--touch-target-size);
+  padding: 0 var(--s);
+  font-size: 11px;
+  font-weight: normal;
+  text-decoration: none !important;
+  color: var(--light-text-color);
+  border-radius: calc(var(--touch-target-size) / 2);
+  border: 1px solid var(--medium-hairline-color);
+}
+
+.context-menu-container .menubtn:hover {
+  border-color: var(--dark-hairline-color);
+}
+
 .chip,
 .card {
   // prevent double focus ring (chip/card already gets it)
@@ -3092,17 +3063,6 @@ table {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-    }
-
-    .draft-label {
-      display: inline-block;
-      @include margin(-1px, 0, -1px, 7px);
-      padding: 1px 5px;
-      font-weight: normal;
-      text-decoration: none !important;
-      color: var(--medium-text-color);
-      background: var(--gray-100);
-      border-radius: var(--large-border-radius);
     }
 
     .segment:after {
@@ -5828,6 +5788,35 @@ $min2ColWidth: 400px;
   display: none;
   position: absolute;
 
+  &.padded {
+    padding: var(--s) calc(var(--m) + var(--s));
+
+    hr {
+      margin: var(--s) calc((var(--m) + var(--s)) * -1);
+    }
+
+    ul {
+      li {
+        margin: 0 calc(var(--m) * -1);
+        padding: 0 var(--m);
+        //&.sel {
+        //  margin: 0 -14px;
+        //  padding: 0 14px;
+        //  background: var(--gray-050);
+        //  border-radius: var(--large-border-radius);
+        //}
+
+        a {
+          border-radius: var(--large-border-radius);
+        }
+      }
+    }
+
+    .extralight {
+      margin-top: 2px;
+    }
+  }
+
   &.additional-menu {
     padding: 0;
 
@@ -5847,7 +5836,7 @@ $min2ColWidth: 400px;
       justify-content: start;
 
       &:hover {
-        @include menu-option-active-styles;
+        @include menu-item-active-styles;
       }
     }
 
@@ -5867,6 +5856,7 @@ $min2ColWidth: 400px;
     &.padded {
       li {
         a,
+        .menu-item,
         .menu-option {
           @include padding-left(24px);
 
@@ -5885,8 +5875,12 @@ $min2ColWidth: 400px;
             }
           }
 
-          &.sel:not([data-icon]):before {
-            content: 'check';
+          &.sel {
+            background: var(--gray-050);
+
+            &:not([data-icon]):before {
+              content: 'check';
+            }
           }
         }
       }
@@ -5894,15 +5888,15 @@ $min2ColWidth: 400px;
 
     li {
       a,
+      .menu-item,
       .menu-option {
-        @include menu-option-styles;
+        @include menu-item-styles;
         font-size: 14px;
         cursor: default;
         -webkit-appearance: none;
 
-        &:not(.flex) {
-          display: table !important;
-          box-sizing: border-box;
+        &:not(.flex):not(.hidden) {
+          display: block;
           width: calc(100% + 28px);
           @include alignleft;
         }
@@ -5976,7 +5970,7 @@ $min2ColWidth: 400px;
 .menu:not(.menu--disclosure) ul li a:not(.sel):not(.disabled):hover,
 .menu.additional-menu.menu--disclosure ul li a:not(.sel):not(.disabled):hover,
 .menu:not(.menu--disclosure):not(:hover) ul li a:not(.disabled).hover {
-  @include menu-option-active-styles;
+  @include menu-item-active-styles;
   --text-color: var(--white);
   --light-text-color: var(--gray-100);
   --ui-control-color: var(--gray-050);
@@ -5985,11 +5979,11 @@ $min2ColWidth: 400px;
 
   span.icon,
   &:before {
-    color: var(--menu-option-active-color);
+    color: var(--menu-item-active-color);
   }
 
   &.error {
-    color: var(--menu-option-active-color) !important;
+    color: var(--menu-item-active-color) !important;
   }
 }
 
@@ -6002,6 +5996,8 @@ $min2ColWidth: 400px;
 
 .menu--disclosure ul li {
   & > a,
+  & > .crumb-label > a,
+  & > .menu-item,
   & > .menu-option {
     &:hover {
       @include disclosure-link-hover-styles;
@@ -7139,7 +7135,7 @@ body {
 
     [data-selectable],
     .optgroup-header {
-      @include menu-option-styles;
+      @include menu-item-styles;
     }
 
     .optgroup {
@@ -7164,7 +7160,7 @@ body {
     }
 
     .selected {
-      @include menu-option-active-styles;
+      @include menu-item-active-styles;
       cursor: default !important;
 
       .light {
@@ -7433,13 +7429,13 @@ ul.errors li {
   }
 
   .autosuggest__results-item {
-    @include menu-option-styles;
+    @include menu-item-styles;
     overflow: hidden;
     text-overflow: ellipsis;
 
     &:hover,
     &.autosuggest__results-item--highlighted {
-      @include menu-option-active-styles;
+      @include menu-item-active-styles;
       cursor: pointer;
 
       .light {
