--- a/src/templates/_layouts/components/crumbs.twig
+++ b/src/templates/_layouts/components/crumbs.twig
@@ -1,18 +1,62 @@
 <div id="crumbs"{% if not crumbs %} class="empty"{% endif %}>
-    <button id="primary-nav-toggle" class="nav-toggle" title="{{ 'Show nav'|t('app') }}" aria-label="{{ 'Show nav'|t('app') }}" aria-expanded="false" aria-controls="global-sidebar" aria-haspopup="true"></button>
-    {% if crumbs %}
-        <nav aria-label="{{ 'Breadcrumbs'|t('app') }}">
-            <ul class="breadcrumb-list">
-                {% for crumb in crumbs %}
-                    <li>
-                        {% if crumb.html ?? false %}
-                            {{ crumb.html|raw }}
-                        {% else %}
-                            <a href="{{ crumb.url }}">{{ crumb.label }}</a>
-                        {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        </nav>
-    {% endif %}
+  <button id="primary-nav-toggle" class="nav-toggle" title="{{ 'Show nav'|t('app') }}" aria-label="{{ 'Show nav'|t('app') }}" aria-expanded="false" aria-controls="global-sidebar" aria-haspopup="true"></button>
+  {% if crumbs %}
+    <nav aria-label="{{ 'Breadcrumbs'|t('app') }}">
+      <ul id="crumb-list">
+        {% for crumb in crumbs %}
+          {% if crumb.menu is defined %}
+            {% set crumb = (
+              crumb.menu|map(o => (o.group ?? false) ? (o.options ?? []) : [o])|flatten(1)|firstWhere(o => o.selected ?? false) ?: {}
+            )|merge(crumb) %}
+          {% endif %}
+
+          {% tag 'li' with {
+            class: {
+              crumb: true,
+              current: crumb.current ?? false,
+            }|filter|keys,
+          } %}
+            {% if crumb.html is defined %}
+              {{ crumb.html|raw }}
+            {% else %}
+              {% set labelId = "crumb-label#{random()}" %}
+              {% tag 'a' with {
+                href: crumb.url is defined ? url(crumb.url) : null,
+              } %}
+                {% if crumb.icon is defined %}
+                  <span data-icon="{{ crumb.icon }}" aria-hidden></span>
+                {% endif %}
+                <span id="{{ labelId }}">
+                  {{ crumb.label ?? crumb.html|raw }}
+                </span>
+
+                {% if crumb.menu is defined %}
+                  {% set menuId = "crumb-menu#{random()}" %}
+                  {{ tag('button', {
+                    class: ['btn', 'menubtn'],
+                    type: 'button',
+                    title: 'Menu'|t('app'),
+                    aria: {
+                      controls: menuId,
+                      describedby: labelId,
+                    },
+                    data: {
+                      'disclosure-trigger': true,
+                    },
+                  }) }}
+                {% endif %}
+              {% endtag %}
+
+              {% if crumb.menu is defined %}
+                {{ disclosureMenu(crumb.menu, {
+                  id: menuId,
+                  withButton: false,
+                }) }}
+              {% endif %}
+            {% endif %}
+          {% endtag %}
+        {% endfor %}
+      </ul>
+    </nav>
+  {% endif %}
 </div>
