--- a/src/templates/assets/_previews/image.twig
+++ b/src/templates/assets/_previews/image.twig
@@ -14,7 +14,7 @@
             maxWidth: asset.width,
             maxHeight: asset.height,
         },
-        onload: 'resizePreviewImage()',
+        onload: 'setTimeout(resizePreviewImage, 100)',
     }) }}
 </div>
 
