--- a/src/templates/_layouts/components/crumbs.twig
+++ b/src/templates/_layouts/components/crumbs.twig
@@ -21,6 +21,7 @@
             {% else %}
               {% set labelId = "crumb-label#{random()}" %}
               {% tag 'a' with {
+                id: crumb.id ?? null,
                 href: crumb.url is defined ? url(crumb.url) : null,
               } %}
                 {% if crumb.icon is defined %}
@@ -31,7 +32,7 @@
                 </span>
 
                 {% if crumb.menu is defined %}
-                  {% set menuId = "crumb-menu#{random()}" %}
+                  {% set menuId = crumb.id is defined ? "#{crumb.id}-menu" : "crumb-menu#{random()}" %}
                   {{ tag('button', {
                     class: ['btn', 'menubtn'],
                     type: 'button',
