--- a/src/templates/_layouts/cp.twig
+++ b/src/templates/_layouts/cp.twig
@@ -74,7 +74,7 @@
 {% set footer = (footer ?? block('footer') ?? '')|trim %}
 {% set crumbs = crumbs ?? null %}
 {% set contextMenu = (contextMenu ?? block('contextMenu') ?? '')|trim %}
-{% set actionMenu = actionMenu ?? null %}
+{% set actionMenu = actionMenu ?? '' %}
 {% set tabs = (tabs ?? [])|length > 1 ? tabs : null %}
 {% set errorSummary = errorSummary ?? null %}
 
@@ -151,22 +151,7 @@
                             {{ contextMenu|raw }}
                         </div>
                     {% endif %}
-                    {% if actionMenu %}
-                        <label id="action-menu-label" class="visually-hidden">{{ 'Actions'|t('app') }}</label>
-                        {{ tag('button', {
-                            class: ['btn', 'action-btn'],
-                            type: 'button',
-                            aria: {
-                                controls: 'action-menu',
-                                describedby: 'action-menu-label',
-                            },
-                            data: {
-                                'disclosure-trigger': true,
-                                icon: 'ellipsis',
-                            },
-                        }) }}
-                        {{ actionMenu|raw }}
-                    {% endif %}
+                    {{ actionMenu|raw }}
                     <div class="flex-grow"></div>
                     <button type="button" id="announcements-btn" class="btn hidden" title="{{ 'What’s New'|t('app') }}">
                         <span class="visually-hidden">{{ 'What’s New'|t('app') }}</span>
