Bring the element action menu into selectable chips & cards

--- a/src/templates/_elements/cards.twig
+++ b/src/templates/_elements/cards.twig
@@ -9,6 +9,7 @@
         context: context ?? 'index',
         inputName: inputName ?? ((name ?? false) ? "#{name}[]" : null),
         selectable: selectable ?? false,
+        showActionMenu: showActionMenu ?? false,
         sortable: sortable ?? false,
       }) %}
       {% if disabled %}
