--- a/src/templates/_elements/structurelist.twig
+++ b/src/templates/_elements/structurelist.twig
@@ -9,6 +9,7 @@
                 {{ elementChip(element, {
                     context: context ?? 'index',
                     inputName: inputName ?? ((name ?? false) ? "#{name}[]" : null),
+                    showActionMenu: showActionMenu ?? false,
                     checkbox: selectable ?? false,
                 }) }}
             </div>
