Element editor updates

--- a/src/templates/_includes/disclosuremenu.twig
+++ b/src/templates/_includes/disclosuremenu.twig
@@ -32,6 +32,7 @@
       href: type == 'button' ? null : url(item.url),
       data: {
         icon: item.icon ?? null,
+        destructive: item.destructive ?? null,
         action: item.action ?? null,
         params: item.params ?? null,
         confirm: item.confirm ?? null,
