Use .disabled-entry instead of .disabled

--- a/src/templates/_components/fieldtypes/Matrix/block.twig
+++ b/src/templates/_components/fieldtypes/Matrix/block.twig
@@ -6,7 +6,7 @@
 {% set entryAttributes = {
   class: [
     'matrixblock',
-    not entry.enabled ? 'disabled',
+    not entry.enabled ? 'disabled-entry',
     static ? 'static',
   ]|filter,
   data: {
