ensure status wording and circle are in one line

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2678,6 +2678,10 @@ table {
       }
 
       td {
+        &[data-attr$='Status'] {
+          white-space: nowrap;
+        }
+
         &.timestamp {
           @include alignright;
           vertical-align: bottom;
