--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -635,6 +635,10 @@ li.crumb {
     .label-link {
       max-width: 15em;
 
+      &:focus-visible {
+        box-shadow: var(--inner-focus-ring);
+      }
+
       span:not(.context-label) {
         display: block;
         white-space: nowrap;
