Separate current label text from button
Allows for a consistent label on the disclosure menu button.

--- a/src/templates/_includes/disclosuremenu.twig
+++ b/src/templates/_includes/disclosuremenu.twig
@@ -57,9 +57,10 @@
 {% endmacro %}
 
 {% if withButton %}
-  {% if hiddenLabel ?? false %}
-    {% set hiddenLabelId = "#{id}-label" %}
-    <label id="{{ hiddenLabelId }}" class="visually-hidden">{{ hiddenLabel }}</label>
+  {% if html ?? false %}
+    {{ html | raw }}
+  {% elseif label ?? false %}
+    <span >{{ label }}</span>
   {% endif %}
 
   {{ tag('button', {
@@ -67,7 +68,7 @@
     type: 'button',
     aria: {
       controls: id,
-      describedby: hiddenLabelId ?? null,
+      label: hiddenLabel ?? null
     },
     data: {
       'disclosure-trigger': true,
