Cleanup disclosure menu hover states

--- a/src/templates/_layouts/components/crumbs.twig
+++ b/src/templates/_layouts/components/crumbs.twig
@@ -23,6 +23,7 @@
               {% set labelId = "crumb-label#{random()}" %}
 
               {% tag 'a' with {
+                class: 'crumb-link',
                 id: crumb.id ?? null,
                 href: crumb.url is defined ? url(crumb.url) : null,
               } %}
