Remove h6 from revisions menu

--- a/src/templates/_includes/disclosuremenu.twig
+++ b/src/templates/_includes/disclosuremenu.twig
@@ -102,7 +102,7 @@
             }|filter|keys
           } %}
             {% if item.heading is defined %}
-              <h6 class="padded">{{ item.heading }}</h6>
+              <p class="h6 padded">{{ item.heading }}</p>
             {% endif %}
             {% tag 'ul' with {
               class: ['padded'],
