--- a/src/templates/_includes/disclosuremenu.twig
+++ b/src/templates/_includes/disclosuremenu.twig
@@ -102,7 +102,7 @@
             }|filter|keys
           } %}
             {% if item.heading is defined %}
-              <p class="h6 padded">{{ item.heading }}</p>
+              <h3 class="h6 padded">{{ item.heading }}</h3>
             {% endif %}
             {% tag 'ul' with {
               class: ['padded'],
